added miller2013 - id of a bloom event method

--- a/manuscript/components/manuscript.bib
+++ b/manuscript/components/manuscript.bib
@@ -9,6 +9,17 @@
   publisher={Wiley Online Library}
 }
 
+@article{miller2013spatiotemporal,
+  title={Spatiotemporal molecular analysis of cyanobacteria blooms reveals Microcystis-Aphanizomenon interactions},
+  author={Miller, Todd R and Beversdorf, Lucas and Chaston, Sheena D and McMahon, Katherine D},
+  journal={PloS one},
+  volume={8},
+  number={9},
+  pages={e74933},
+  year={2013},
+  publisher={Public Library of Science}
+}
+
 @article{landis1977measurement,
   title={The measurement of observer agreement for categorical data},
   author={Landis, J Richard and Koch, Gary G},
