--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -179,7 +179,7 @@ The association between Log 10 microcystin-LR and Log 10 chlorophyll *a* show a 
 This is the case as the probability of exceeding each of the four tested health advisory levels increases as a function of chlorophyll *a* concentration (Figure \ref{fig:multi_cp_plot}).  We use this association to identify chlorophyll *a* concentrations that are associated with greater than even odds of exceeding a given health advisory level (Table \ref{tab:mc_chla_table}).  These represent `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[1]])/length(nla_dat$CHLA)),1)`%, `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[2]])/length(nla_dat$CHLA)),1)`%,
 `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[3]])/length(nla_dat$CHLA)),1)`%, and `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[4]])/length(nla_dat$CHLA)),1)`% of sample lakes for the U.S EPA childrens drinking water, the WHO drinking water, the U.S. EPA Adult drinking water, and the WHO recreational standards, respecitvely.  
 
-There are numerous possible uses for the chlorophyll *a* and microcystin-LR advisory cut-off values.  First, in the absence of microcystin-LR measurements, exceedence of the chlorophyll *a* concentrations could be a trigger for further actions.  Given that there is uncertainity around these chlorophyll *a* cutoffs the best case scenario would be to monitor for chlorophyll and in the event of exceeding a target concentration take water samples and have those samples tested in a lab for microcystin-LR.  A second potential use is to identify possible bloom events from historical data.  Currently, there are several suggestions on how to identify a bloom event, but there is variation across the definitions and quantitative links to measures of cyanobacteria are not always included [REFS].  Using our chlorophyll *a* cutoffs provides a value that is directly associated with microcystin-LR and can be used to classify lakes, from past surveys, as havin bloomed.  
+There are numerous possible uses for the chlorophyll *a* and microcystin-LR advisory cut-off values.  First, in the absence of microcystin-LR measurements, exceedence of the chlorophyll *a* concentrations could be a trigger for further actions.  Given that there is uncertainity around these chlorophyll *a* cutoffs the best case scenario would be to monitor for chlorophyll and in the event of exceeding a target concentration take water samples and have those samples tested in a lab for microcystin-LR.  A second potential use is to identify possible bloom events from historical data.  As harmful algal blooms are made up of many species and have various mechanism responsible for adverse impacts (e.g. toxins, hypoxia, odors), there is no single definition of a bloom.  For cHABs one approach has been to identify an increase over a baseline concentration of phycocyanin [@miller2013spatiotemporal].  This is a useful approach for targeted studies, but phycocyanin is also not always available and measures the predominance of cyanobacterial pigments and not toxins. Using our chlorophyll *a* cutoffs provides a value that is more directly associated with microcystin-LR and can be used to classify lakes, from past surveys, as having bloomed.  
 
 These values are conservative: greater than even odds for the upper CI. Most protective.  
 
