--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -329,13 +329,17 @@ is uncertainity around these chlorophyll \emph{a} cutoffs the best case
 scenario would be to monitor for chlorophyll and in the event of
 exceeding a target concentration take water samples and have those
 samples tested in a lab for microcystin-LR. A second potential use is to
-identify possible bloom events from historical data. Currently, there
-are several suggestions on how to identify a bloom event, but there is
-variation across the definitions and quantitative links to measures of
-cyanobacteria are not always included {[}REFS{]}. Using our chlorophyll
-\emph{a} cutoffs provides a value that is directly associated with
-microcystin-LR and can be used to classify lakes, from past surveys, as
-havin bloomed.
+identify possible bloom events from historical data. As harmful algal
+blooms are made up of many species and have various mechanism
+responsible for adverse impacts (e.g.~toxins, hypoxia, odors), there is
+no single definition of a bloom. For cHABs one approach has been to
+identify an increase over a baseline concentration of phycocyanin
+(Miller et al. 2013). This is a useful approach for targeted studies,
+but phycocyanin is also not always available and measures the
+predominance of cyanobacterial pigments and not toxins. Using our
+chlorophyll \emph{a} cutoffs provides a value that is more directly
+associated with microcystin-LR and can be used to classify lakes, from
+past surveys, as having bloomed.
 
 These values are conservative: greater than even odds for the upper CI.
 Most protective.
@@ -356,10 +360,6 @@ and microcystin-LR. \label{fig:chla_micro_scatter}}
 \end{figure}
 
 \newpage
-
-\begin{verbatim}
-## Loading required package: grid
-\end{verbatim}
 
 \begin{figure}[htbp]
 \centering
@@ -423,6 +423,10 @@ WHO & Recreational & 2.0 & 102.60\tabularnewline
 
 \section*{References}\label{references}
 \addcontentsline{toc}{section}{References}
+
+Miller, T. R., L. Beversdorf, S. D. Chaston, and K. D. McMahon. 2013.
+Spatiotemporal molecular analysis of cyanobacteria blooms reveals
+microcystis-aphanizomenon interactions. PloS one 8:e74933.
 
 Paul, J. F., and W. R. Munns. 2011. Probability surveys, conditional
 probability, and ecological risk assessment. Environmental Toxicology
