-added refs and text about field test

--- a/manuscript/components/manuscript.bib
+++ b/manuscript/components/manuscript.bib
@@ -1,3 +1,87 @@
+@article{paerl2013harmful,
+  title={Harmful cyanobacterial blooms: causes, consequences, and controls},
+  author={Paerl, Hans W and Otten, Timothy G},
+  journal={Microbial ecology},
+  volume={65},
+  number={4},
+  pages={995--1010},
+  year={2013},
+  publisher={Springer}
+}
+
+@article{lee2000variation,
+  title={Variation of microcystin content of Microcystis aeruginosa relative to medium N: P ratio and growth stage},
+  author={Lee, SJ and Jang, M-H and Kim, H-S and Yoon, B-D and Oh, H-M},
+  journal={Journal of Applied Microbiology},
+  volume={89},
+  number={2},
+  pages={323--329},
+  year={2000},
+  publisher={Wiley Online Library}
+}
+
+@article{rinta2009lake,
+  title={Lake Erie Microcystis: relationship between microcystin production, dynamics of genotypes and environmental parameters in a large lake},
+  author={Rinta-Kanto, Johanna M and Konopko, Elisabeth A and DeBruyn, Jennifer M and Bourbonniere, Richard A and Boyer, Gregory L and Wilhelm, Steven W},
+  journal={Harmful Algae},
+  volume={8},
+  number={5},
+  pages={665--673},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{zurawell2005hepatotoxic,
+  title={Hepatotoxic cyanobacteria: a review of the biological importance of microcystins in freshwater environments},
+  author={Zurawell, Ronald W and Chen, Huirong and Burke, Janice M and Prepas, Ellie E},
+  journal={Journal of Toxicology and Environmental Health, Part B},
+  volume={8},
+  number={1},
+  pages={1--37},
+  year={2005},
+  publisher={Taylor \& Francis}
+}
+
+@article{mcelhiney2005detection,
+  title={Detection of the cyanobacterial hepatotoxins microcystins},
+  author={McElhiney, Jacqui and Lawton, Linda A},
+  journal={Toxicology and Applied Pharmacology},
+  volume={203},
+  number={3},
+  pages={219--230},
+  year={2005},
+  publisher={Elsevier}
+}
+
+@article{aranda2015evaluation,
+  title={Evaluation of three field test kits to detect microcystins from a public health perspective},
+  author={Aranda-Rodriguez, Rocio and Jin, Zhiyun and Harvie, Jeromy and Cabecinha, Ashley},
+  journal={Harmful Algae},
+  volume={42},
+  pages={34--42},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{james2011environmental,
+  title={Environmental technology verification report: Abraxis microcystin test kits},
+  author={James, R and Gregg, A and Dindal, A and McKernan, J},
+  journal={Online document. Accessed online: June},
+  volume={22},
+  year={2011}
+}
+
+@article{jetoo2015toledo,
+  title={The Toledo Drinking Water Advisory: Suggested Application of the Water Safety Planning Approach},
+  author={Jetoo, Savitri and Grover, Velma I and Krantzberg, Gail},
+  journal={Sustainability},
+  volume={7},
+  number={8},
+  pages={9787--9808},
+  year={2015},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
 @article{paul2011probability,
   title={Probability surveys, conditional probability, and ecological risk assessment},
   author={Paul, John F and Munns, Wayne R},
