--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -145,18 +145,18 @@ mc_chla[4] <- get_chla(who_rec_low1_cp,0.5)
 \vspace{2mm}\hrule
 
 <!-- Abstract is being wrapped in latex here so that all analysis can be run in the chunk above and the results reproducibly referenced in the abstract. -->
-Cyanobacteria harmful algal blooms (cHABs) are associated with a wide range of adverse health effects that stem mostly from the presence of cyanotoxins.  To help protect against these impacts, several health advisory levels have been set for some toxins.  In particular, one of the more common toxins, microcystin, has several advisory levels set for drinking water and recreational use and managing water bodies to meet those levels could have far reaching benefits.  However, compared to other water quality measures, measurements of microcystin are not common and current field measurement techniques have limited precision and accuracy.  Addressing these issues will take time and resources.  Thus, there is utility in finding indicators of microcystin that are already widely available, can be estimated quickly and *in situ*, and used as a first defense against high levels of microcystin.  In particular, chlorophyll *a* is very commonly measured, can be estimated *in situ*, and has been shown to be positively associated with microcystin.  In this paper we use this association to provide estimates of chlorophyll *a* that if exceeded would be indicative of a higher probability of exceeding select health advisory concentrations for microcystin-LR.  Using the 2007 National Lakes Assessment and a conditional probability approach that has been used in other water quality settings, we identify chlorophyll *a* concentrations that are more likely than not to be associated with an exceedance of a microcystin health advisory level.  We look at the recent US EPA standards for drinking water as well as the World Health Organization levels for drinking water and recreational use.  For microcystin concentrations of 0.3, 1, 1.6, and 2 we find chlorophyll *a* concentrations of `r mc_chla[1]`, `r mc_chla[2]`, `r mc_chla[3]`, and `r mc_chla[4]`, respectively.  When managing for these various microcystin levels exceeding these reported chlorophyll *a* concentrations should be a trigger for further testing and possible management action.   
+Cyanobacteria harmful algal blooms (cHABs) are associated with a wide range of adverse health effects that stem mostly from the presence of cyanotoxins.  To help protect against these impacts, several health advisory levels have been set for some toxins.  In particular, one of the more common toxins, microcystin, has several advisory levels set for drinking water and recreational use.  However, compared to other water quality measures, field measurements of microcystin are not commonly available due to cost and require advanced understanding to interpret results.  Addressing these issues will take time and resources.  Thus, there is utility in finding indicators of microcystin that are already widely available, can be estimated quickly and *in situ*, and used as a first defense against high levels of microcystin.  In particular, chlorophyll *a* is very commonly measured, can be estimated *in situ*, and has been shown to be positively associated with microcystin.  In this paper we use this association to provide estimates of chlorophyll *a* that if exceeded would be indicative of a higher probability of exceeding select health advisory concentrations for microcystin-LR.  Using the 2007 National Lakes Assessment and a conditional probability approach that has been used in other water quality settings, we identify chlorophyll *a* concentrations that are more likely than not to be associated with an exceedance of a microcystin health advisory level.  We look at the recent US EPA standards for drinking water as well as the World Health Organization levels for drinking water and recreational use.  For microcystin concentrations of 0.3, 1, 1.6, and 2 we find chlorophyll *a* concentrations of `r mc_chla[1]`, `r mc_chla[2]`, `r mc_chla[3]`, and `r mc_chla[4]`, respectively.  When managing for these various microcystin levels exceeding these reported chlorophyll *a* concentrations should be a trigger for further testing and possible management action.   
 
 \vspace{3mm}\hrule
 \doublespace
 
 #Introduction
 
-In the summer of 2014, the city of Toledo, OH was forced to shut down their municipal water supply due in part to an excess of microcystin-LR that resulted from a ongoing cyanobacteria harmful algal bloom (cHAB) in Lake Erie [REFS].  Since this event, significant legislation has been passed in the United States and the US Environmental Protection Agency (USEPA) has released suggested microcystin-LR concentrations that would trigger health advisories.  MORE ON THE LEVELS. While these levels and associated advisories are likely to help mitigate the impacts from harmful algal blooms, they are not without complications.  
+In the summer of 2014, the city of Toledo, OH was forced to shut down their municipal water supply due in part to an excess of microcystin-LR that resulted from a ongoing cyanobacteria harmful algal bloom (cHAB) in Lake Erie [@jetoo2015toledo; @rinta2009lake].  Since this event, significant legislation has been passed in the United States and the US Environmental Protection Agency (USEPA) has released suggested microcystin-LR (one of the more common toxins) concentrations that would trigger health advisories [@mcelhiney2005detection; @zurawell2005hepatotoxic].  MORE ON THE LEVELS. While these levels and associated advisories are likely to help mitigate the impacts from harmful algal blooms, they are not without complications.  
 
-One of these complications is that they rely on available measurements of microcystin-LR.  This toxin can be measured in the field using test strips but these are a coarse measure at best and currently available test strips focus on 1 and 10 $\mu$g/L [REFS].  Measurements with greater accuracy and precision require taking water samples and processing those in a lab to determine the toxin concentration [REFS].  Additionally, microcystin-LR is, currently, not a routinely collected water quality parameter,thus, availability of microcystin-LR data may limit our ability to screen water bodies for exceedances of the various health advisories concentrations.  Until microcystin-LR concentrations are more widely collected an alternative measure is needed. Fortunately, microcystin-LR has been shown to be associated with several other, more easily measured components of water quality.
+One of these complications is that they rely on available measurements of microcystin-LR.  While laboratory testing remains the gold standard for quantifying microcystin-LY concentrations in water samples, several field test kits have been developed.  Even though field tests provide a much needed means for rapid assessment, they are infrequently available to lake managers.  These kits are moderately expensive (approximately $150-$200 depending on specific kit) with a limited shelf life (typically one year) [@james2011environmental; @aranda2015evaluation].  Additionally, each technique requires nuanced understanding of the detection method (e.g., limit of detection, specific microcystin variants being measured, and sampling protocol).    Fortunately, microcystin-LR has been shown to be associated with several other, more commonly measured and understood components of water quality.
 
-Chlorophyll *a* is a very commonly measured components of water quality that is also known to be associated with Microsystin-LR concentrations [REFS].  Additionally there are many rapid measurements for assessing chlorophyll *a* levels *in situ*.  For instance, there are small or hand held flourometers that provide reliable measurements [REFS].   Given these facts, it might be possible to identify chlorophyll *a* concentrations that would be associated with the various Microcystin-LR health advisory levels.  Identifying these associations would provide another reliable tool for water resource managers to use to help manage the threat to public health posed by cHABs and would be especially useful in the absence of microcystin-LR concentrations.  Thus, the goal of this paper is to utlize the National Lakes Assessment data and identify chlorophyll *a* concentrations that are associated with higher probabilities of exceeding several microcystin-LR health advisory concentrations [NLA REF].  So that others may repeat or adjust this analysis, the data, code, and this manuscript are freely available via [https://github.com/USAPE/microcystinchla](https://github.com/USAPE/microcystinchla).
+Chlorophyll *a* is a very commonly measured components of water quality that is also known to be associated with Microsystin-LR concentrations [@lee2000variation, @paerl2013harmful].  Additionally there are many rapid measurements for assessing chlorophyll *a* levels *in situ*.  For instance, there are small or hand held flourometers that provide reliable measurements [REFS].   Given these facts, it might be possible to identify chlorophyll *a* concentrations that would be associated with the various Microcystin-LR health advisory levels.  Identifying these associations would provide another reliable tool for water resource managers to use to help manage the threat to public health posed by cHABs and would be especially useful in the absence of microcystin-LR concentrations.  Thus, the goal of this paper is to utlize the National Lakes Assessment data and identify chlorophyll *a* concentrations that are associated with higher probabilities of exceeding several microcystin-LR health advisory concentrations [NLA REF].  So that others may repeat or adjust this analysis, the data, code, and this manuscript are freely available via [https://github.com/USAPE/microcystinchla](https://github.com/USAPE/microcystinchla).
 
 #Methods
 
