--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -165,11 +165,10 @@ range of adverse health effects that stem mostly from the presence of
 cyanotoxins. To help protect against these impacts, several health
 advisory levels have been set for some toxins. In particular, one of the
 more common toxins, microcystin, has several advisory levels set for
-drinking water and recreational use and managing water bodies to meet
-those levels could have far reaching benefits. However, compared to
-other water quality measures, measurements of microcystin are not common
-and current field measurement techniques have limited precision and
-accuracy. Addressing these issues will take time and resources. Thus,
+drinking water and recreational use. However, compared to other water
+quality measures, field measurements of microcystin are not commonly
+available due to cost and require advanced understanding to interpret
+results. Addressing these issues will take time and resources. Thus,
 there is utility in finding indicators of microcystin that are already
 widely available, can be estimated quickly and \emph{in situ}, and used
 as a first defense against high levels of microcystin. In particular,
@@ -202,44 +201,46 @@ testing and possible management action.
 In the summer of 2014, the city of Toledo, OH was forced to shut down
 their municipal water supply due in part to an excess of microcystin-LR
 that resulted from a ongoing cyanobacteria harmful algal bloom (cHAB) in
-Lake Erie {[}REFS{]}. Since this event, significant legislation has been
-passed in the United States and the US Environmental Protection Agency
-(USEPA) has released suggested microcystin-LR concentrations that would
-trigger health advisories. MORE ON THE LEVELS. While these levels and
-associated advisories are likely to help mitigate the impacts from
-harmful algal blooms, they are not without complications.
+Lake Erie (Rinta-Kanto et al. 2009, Jetoo et al. 2015). Since this
+event, significant legislation has been passed in the United States and
+the US Environmental Protection Agency (USEPA) has released suggested
+microcystin-LR (one of the more common toxins) concentrations that would
+trigger health advisories (McElhiney and Lawton 2005, Zurawell et al.
+2005). MORE ON THE LEVELS. While these levels and associated advisories
+are likely to help mitigate the impacts from harmful algal blooms, they
+are not without complications.
 
 One of these complications is that they rely on available measurements
-of microcystin-LR. This toxin can be measured in the field using test
-strips but these are a coarse measure at best and currently available
-test strips focus on 1 and 10 \(\mu\)g/L {[}REFS{]}. Measurements with
-greater accuracy and precision require taking water samples and
-processing those in a lab to determine the toxin concentration
-{[}REFS{]}. Additionally, microcystin-LR is, currently, not a routinely
-collected water quality parameter,thus, availability of microcystin-LR
-data may limit our ability to screen water bodies for exceedances of the
-various health advisories concentrations. Until microcystin-LR
-concentrations are more widely collected an alternative measure is
-needed. Fortunately, microcystin-LR has been shown to be associated with
-several other, more easily measured components of water quality.
+of microcystin-LR. While laboratory testing remains the gold standard
+for quantifying microcystin-LY concentrations in water samples, several
+field test kits have been developed. Even though field tests provide a
+much needed means for rapid assessment, they are infrequently available
+to lake managers. These kits are moderately expensive (approximately
+\$150-\$200 depending on specific kit) with a limited shelf life
+(typically one year) (James et al. 2011, Aranda-Rodriguez et al. 2015).
+Additionally, each technique requires nuanced understanding of the
+detection method (e.g., limit of detection, specific microcystin
+variants being measured, and sampling protocol). Fortunately,
+microcystin-LR has been shown to be associated with several other, more
+commonly measured and understood components of water quality.
 
 Chlorophyll \emph{a} is a very commonly measured components of water
 quality that is also known to be associated with Microsystin-LR
-concentrations {[}REFS{]}. Additionally there are many rapid
-measurements for assessing chlorophyll \emph{a} levels \emph{in situ}.
-For instance, there are small or hand held flourometers that provide
-reliable measurements {[}REFS{]}. Given these facts, it might be
-possible to identify chlorophyll \emph{a} concentrations that would be
-associated with the various Microcystin-LR health advisory levels.
-Identifying these associations would provide another reliable tool for
-water resource managers to use to help manage the threat to public
-health posed by cHABs and would be especially useful in the absence of
-microcystin-LR concentrations. Thus, the goal of this paper is to utlize
-the National Lakes Assessment data and identify chlorophyll \emph{a}
-concentrations that are associated with higher probabilities of
-exceeding several microcystin-LR health advisory concentrations {[}NLA
-REF{]}. So that others may repeat or adjust this analysis, the data,
-code, and this manuscript are freely available via
+concentrations (Lee et al. 2000, Paerl and Otten (2013)). Additionally
+there are many rapid measurements for assessing chlorophyll \emph{a}
+levels \emph{in situ}. For instance, there are small or hand held
+flourometers that provide reliable measurements {[}REFS{]}. Given these
+facts, it might be possible to identify chlorophyll \emph{a}
+concentrations that would be associated with the various Microcystin-LR
+health advisory levels. Identifying these associations would provide
+another reliable tool for water resource managers to use to help manage
+the threat to public health posed by cHABs and would be especially
+useful in the absence of microcystin-LR concentrations. Thus, the goal
+of this paper is to utlize the National Lakes Assessment data and
+identify chlorophyll \emph{a} concentrations that are associated with
+higher probabilities of exceeding several microcystin-LR health advisory
+concentrations {[}NLA REF{]}. So that others may repeat or adjust this
+analysis, the data, code, and this manuscript are freely available via
 \href{https://github.com/USAPE/microcystinchla}{\url{https://github.com/USAPE/microcystinchla}}.
 
 \section{Methods}\label{methods}
@@ -361,6 +362,10 @@ and microcystin-LR. \label{fig:chla_micro_scatter}}
 
 \newpage
 
+\begin{verbatim}
+## Loading required package: grid
+\end{verbatim}
+
 \begin{figure}[htbp]
 \centering
 \includegraphics{manuscript_files/figure-latex/epa_child_cp_plot-1.pdf}
@@ -424,12 +429,46 @@ WHO & Recreational & 2.0 & 102.60\tabularnewline
 \section*{References}\label{references}
 \addcontentsline{toc}{section}{References}
 
+Aranda-Rodriguez, R., Z. Jin, J. Harvie, and A. Cabecinha. 2015.
+Evaluation of three field test kits to detect microcystins from a public
+health perspective. Harmful Algae 42:34--42.
+
+James, R., A. Gregg, A. Dindal, and J. McKernan. 2011. Environmental
+technology verification report: Abraxis microcystin test kits. Online
+document. Accessed online: June 22.
+
+Jetoo, S., V. I. Grover, and G. Krantzberg. 2015. The toledo drinking
+water advisory: Suggested application of the water safety planning
+approach. Sustainability 7:9787--9808.
+
+Lee, S., M.-H. Jang, H.-S. Kim, B.-D. Yoon, and H.-M. Oh. 2000.
+Variation of microcystin content of microcystis aeruginosa relative to
+medium n: P ratio and growth stage. Journal of Applied Microbiology
+89:323--329.
+
+McElhiney, J., and L. A. Lawton. 2005. Detection of the cyanobacterial
+hepatotoxins microcystins. Toxicology and Applied Pharmacology
+203:219--230.
+
 Miller, T. R., L. Beversdorf, S. D. Chaston, and K. D. McMahon. 2013.
 Spatiotemporal molecular analysis of cyanobacteria blooms reveals
 microcystis-aphanizomenon interactions. PloS one 8:e74933.
 
+Paerl, H. W., and T. G. Otten. 2013. Harmful cyanobacterial blooms:
+Causes, consequences, and controls. Microbial ecology 65:995--1010.
+
 Paul, J. F., and W. R. Munns. 2011. Probability surveys, conditional
 probability, and ecological risk assessment. Environmental Toxicology
 and Chemistry 30:1488--1495.
+
+Rinta-Kanto, J. M., E. A. Konopko, J. M. DeBruyn, R. A. Bourbonniere, G.
+L. Boyer, and S. W. Wilhelm. 2009. Lake erie microcystis: Relationship
+between microcystin production, dynamics of genotypes and environmental
+parameters in a large lake. Harmful Algae 8:665--673.
+
+Zurawell, R. W., H. Chen, J. M. Burke, and E. E. Prepas. 2005.
+Hepatotoxic cyanobacteria: A review of the biological importance of
+microcystins in freshwater environments. Journal of Toxicology and
+Environmental Health, Part B 8:1--37.
 
 \end{document}
